--- a/index.html
+++ b/index.html
@@ -35,8 +35,16 @@
 					</div>
 				
 			</div>
-			<h2>Trouvez votre hébergement pour des vacances de rêves</h2>
+			<h2>Trouvez votre hébergement pour des vacances de rêve</h2>
 			<p>En plein centre ville ou en pleine nature</p>
+
+			<div class="searchbar">
+				<form action="from search" class="formulaire">
+					<input class="champ" type="text" value="Marseille,France"/>
+					<input class="bouton" type="button" value=" Rechercher"/>
+				
+				</form>
+			</div>
 		</body>
 
 	
