--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
     <!-- Police de la page -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -54,6 +55,29 @@
               </li>
             </ul>
           </div>
+          <div class="menu_mobil_sinscrire">
+            <a href="#" class="login" data-text="s'inscrire">S'inscrire</a>
+          </div>
+          <div class="menu_mobil">
+            <ul>
+              <li>
+                <a
+                  class="active"
+                  href="#mon_ancre_hebergements"
+                  data-text="Hebergements"
+                  >Hébergements</a
+                >
+              </li>
+              <li>
+                <a
+                  class="list"
+                  href="#mon_ancre_activites"
+                  data-text="Activites"
+                  >Activités</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
 
@@ -102,7 +126,7 @@
       </div>
     </header>
     <main>
-      <section class="blocs" id="blocs">
+      <section class="blocs">
         <div class="nav_hebergements">
           <div class="title_hebergements">
             <h2 id="mon_ancre_hebergements">Hébergements sur Marseille</h2>
@@ -274,96 +298,96 @@
             <h2>Les plus populaires</h2>
             <div class="chart-line"><i class="fas fa-chart-line"></i></div>
           </div>
-        
-        <div class="grid_container_populaires">
-          <div class="grid_populaires">
 
-            <div class="image_populaires">
-              <a href="#">
-                <img
-                  src="assets/images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                  alt="Hôtel le Soleil du matin"
-                />
+          <div class="grid_container_populaires">
+            <div class="grid_populaires">
+              <div class="image_populaires">
+                <a href="#">
+                  <img
+                    src="assets/images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                    alt="Hôtel le Soleil du matin"
+                  />
                 </a>
               </div>
 
               <div class="texte_populaires">
                 <a href="#">
-                  <h2>Hôtel le Soleil du <br>
-                  matin
-                </h2>
-                <p>Nuit à partir de <strong>128€</strong></p>
-                <div class="rating">
-                  <div class="stars">
-                    <i class="fa fa-star blue"></i>
-                    <i class="fa fa-star blue"></i>
-                    <i class="fa fa-star blue"></i>
-                    <i class="fa fa-star blue"></i>
-                    <i class="fa fa-star blue"></i>
+                  <h2>
+                    Hôtel le Soleil du <br />
+                    matin
+                  </h2>
+                  <p>Nuit à partir de <strong>128€</strong></p>
+                  <div class="rating">
+                    <div class="stars">
+                      <i class="fa fa-star blue"></i>
+                      <i class="fa fa-star blue"></i>
+                      <i class="fa fa-star blue"></i>
+                      <i class="fa fa-star blue"></i>
+                      <i class="fa fa-star blue"></i>
+                    </div>
                   </div>
-                </div>
-              </a>
+                </a>
               </div>
-          </div>
-
-          <div class="grid_populaires">
-            <div class="image_populaires">
-              <a href="#"
-                ><img
-                  src="assets/images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg"
-                  alt="Au coeur de l'eau Chambres d'hôtes"
-                />
-              </a>
             </div>
 
-            <div class="texte_populaires">
-              <a href="#"
-                ><h2>Au coeur de l'eau <br>Chambres d'hôtes</h2>
-                <p>Nuit à partir de <strong>71€</strong></p>
+            <div class="grid_populaires">
+              <div class="image_populaires">
+                <a href="#"
+                  ><img
+                    src="assets/images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                    alt="Au coeur de l'eau Chambres d'hôtes"
+                  />
+                </a>
+              </div>
 
-                <div class="rating">
-                  <div class="stars">
-                    <i class="fa fa-star blue"></i>
-                    <i class="fa fa-star blue"></i>
-                    <i class="fa fa-star blue"></i>
-                    <i class="fa fa-star blue"></i>
-                    <i class="fa fa-star"></i>
+              <div class="texte_populaires">
+                <a href="#"
+                  ><h2>Au coeur de l'eau <br />Chambres d'hôtes</h2>
+                  <p>Nuit à partir de <strong>71€</strong></p>
+
+                  <div class="rating">
+                    <div class="stars">
+                      <i class="fa fa-star blue"></i>
+                      <i class="fa fa-star blue"></i>
+                      <i class="fa fa-star blue"></i>
+                      <i class="fa fa-star blue"></i>
+                      <i class="fa fa-star"></i>
+                    </div>
                   </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="grid_populaires">
-            <div class="image_populaires">
-              <a href="#"
-                ><img
-                  src="assets/images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-                  alt="Hôtel tout bleu et Blanc"
-                />
-              </a>
+                </a>
+              </div>
             </div>
 
-            <div class="texte_populaires">
-              <a href="#"
-                ><h2>Hôtel tout bleu et <br>Blanc</h2>
-                <p>Nuit à partir de <strong>68€</strong></p>
-                <div class="rating">
-                  <div class="stars">
-                    <i class="fa fa-star blue"></i>
-                    <i class="fa fa-star blue"></i>
-                    <i class="fa fa-star blue"></i>
-                    <i class="fa fa-star blue"></i>
-                    <i class="fa fa-star"></i>
+            <div class="grid_populaires">
+              <div class="image_populaires">
+                <a href="#"
+                  ><img
+                    src="assets/images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                    alt="Hôtel tout bleu et Blanc"
+                  />
+                </a>
+              </div>
+
+              <div class="texte_populaires">
+                <a href="#"
+                  ><h2>Hôtel tout bleu et <br />Blanc</h2>
+                  <p>Nuit à partir de <strong>68€</strong></p>
+                  <div class="rating">
+                    <div class="stars">
+                      <i class="fa fa-star blue"></i>
+                      <i class="fa fa-star blue"></i>
+                      <i class="fa fa-star blue"></i>
+                      <i class="fa fa-star blue"></i>
+                      <i class="fa fa-star"></i>
+                    </div>
                   </div>
-                </div>
-              </a>
+                </a>
+              </div>
             </div>
           </div>
-        </div>
         </div>
       </section>
-      <section class="activites">
+      <aside class="activites">
         <div class="title_activites">
           <h2 id="mon_ancre_activites">Activités à Marseille</h2>
         </div>
@@ -428,7 +452,7 @@
             </a>
           </div>
         </div>
-      </section>
+      </aside>
     </main>
     <footer>
       <div class="a_propos">
