--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <section class="blocs">
         <div class="nav_hebergements">
           <div class="title_hebergements">
-            <h2 id="mon_ancre_hebergements">Hébergements sur Marseille</h2>
+            <h2 id="mon_ancre_hebergements">Hébergements à Marseille</h2>
           </div>
 
           <div class="grid_container_hebergements">
