--- a/index.html
+++ b/index.html
@@ -582,56 +582,56 @@
       <div class="footer_desktop">
         <div class="a_propos_desktop">
           <h3>A propos</h3>
-          <p>Fonctionnement du site</p>
-          <p>Conditions générales de vente</p>
-          <p>Données et confidentialité</p>
+          <a href="#"><p>Fonctionnement du site</p></a>
+          <a href="#"><p>Conditions générales de vente</p></a>
+          <a href="#"><p>Données et confidentialité</p></a>
         </div>
         <div class="nos_hebergements_desktop">
           <h3>Nos hébergements</h3>
-          <p>Carte qualité</p>
-          <p>Soumettre votre hôtel</p>
+          <a href="#"><p>Carte qualité</p></a>
+          <a href="#"><p>Soumettre votre hôtel</p></a>
         </div>
         <div class="assistance_desktop">
           <h3>Assitance</h3>
-          <p>Centre d'aide</p>
-          <p>Nous contacter</p>
+          <a href="#"><p>Centre d'aide</p></a>
+          <a href="#"><p>Nous contacter</p></a>
         </div>
       </div>
       <div class="footer_mobil">
         <div class="a_propos_mobil">
           <h3>A propos</h3>
-          <p>Fonctionnement du site</p>
-          <p>Conditions générales de vente</p>
-          <p>Données et confidentialité</p>
+          <a href="#"><p>Fonctionnement du site</p></a>
+          <a href="#"><p>Conditions générales de vente</p></a>
+          <a href="#"><p>Données et confidentialité</p></a>
         </div>
         <div class="nos_hebergements_mobil">
           <h3>Nos hébergements</h3>
-          <p>Carte qualité</p>
-          <p>Soumettre votre hôtel</p>
+          <a href="#"><p>Carte qualité</p></a>
+          <a href="#"><p>Soumettre votre hôtel</p></a>
         </div>
         <div class="assistance_mobil">
           <h3>Assitance</h3>
-          <p>Centre d'aide</p>
-          <p>Nous contacter</p>
+          <a href="#"><p>Centre d'aide</p></a>
+          <a href="#"><p>Nous contacter</p></a>
         </div>
       </div>
 
       <div class="footer_tab">
         <div class="a_propos_tab">
           <h3>A propos</h3>
-          <p>Fonctionnement du site</p>
-          <p>Conditions générales de vente</p>
-          <p>Données et confidentialité</p>
+          <a href="#"><p>Fonctionnement du site</p></a>
+          <a href="#"><p>Conditions générales de vente</p></a>
+          <a href="#"><p>Données et confidentialité</p></a>
         </div>
         <div class="nos_hebergements_tab">
           <h3>Nos hébergements</h3>
-          <p>Carte qualité</p>
-          <p>Soumettre votre hôtel</p>
+          <a href="#"><p>Carte qualité</p></a>
+          <a href="#"><p>Soumettre votre hôtel</p></a>
         </div>
         <div class="assistance_tab">
           <h3>Assitance</h3>
-          <p>Centre d'aide</p>
-          <p>Nous contacter</p>
+          <a href="#"><p>Centre d'aide</p></a>
+          <a href="#"><p>Nous contacter</p></a>
         </div>
       </div>
     </footer>
